fix line number alignment to code-lines

--- a/src/sass/_theme_full_source.scss
+++ b/src/sass/_theme_full_source.scss
@@ -19,11 +19,10 @@ pre {
       }
 
       &.code-line-numbers {
-        width: 35px;
         position: absolute;
         top: 0;
         left: 0;
-        padding: 12px 2px 18px 0;
+        padding: 12px 2px 12px 0;
         border-right: 1px solid #C3CCD0;
         border-radius: 3px 0 0 3px;
         background-color: #EEE;
